# Kotlin-Tools

./: .gitignore  1.bat  README.md  build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  FileUtils.cpp  FileUtils.h  file.c  file.h  native-lib.c  native-lib.cpp  utf8_gbk_mem.h
app/src/main/res/drawable/: actionbar_gradient_background.xml  black_rounded_background.xml  circle_black_background.xml  circle_black_background_with_inset.xml  exo_edit_mode_logo.xml  gradient_background.xml  ic_arrow_back_24px.xml  ic_arrow_back_white_24px.xml  ic_close_24px.xml  ic_delete_forever_24px.xml  ic_edit.xml  ic_edit_24px.xml  ic_file_archive.xml  ic_file_audio.xml  ic_file_download_24px.xml  ic_file_pdf.xml  ic_file_white_archive.xml  ic_file_white_pdf.xml  ic_folder_48px.xml  ic_g_translate_24px.xml  ic_insert_drive_file_48px.xml  ic_pause_48px.xml  ic_play_arrow_48px.xml  ic_refresh_24px.xml  ic_sd_storage_24px.xml  ic_sd_storage_white_24px.xml  ic_select_all_24px.xml  ic_select_all_white_24px.xml  ic_sort_24px.xml  ic_sort_by_alpha_24px.xml  ic_storage_24px.xml  ic_white_edit.xml  selector.xml
app/src/main/res/layout/: activity_download.xml  activity_file.xml  activity_main.xml  activity_player.xml  activity_player_video.xml  activity_preview.xml  activity_translator.xml  activity_video.xml  dialog_title.xml  dialog_write_permission.xml  dialog_write_permission_otg.xml  exo_playback_control_view.xml  exo_simple_player_view.xml  item_download.xml  item_file.xml  item_sorting.xml  statusbar.xml  (+1 more)
(+319 files in other folders)
